# STAR_sedrica

./: .gitignore
src/part1_pubsub/: CMakeLists.txt  package.xml
src/part1_pubsub/scripts/: custom_msg_publisher.py  custom_msg_subscriber.py  publisher.py  subscriber.py
src/part2_navigation/: CMakeLists.txt  package.xml
src/part2_navigation/scripts/: move_circle.py  move_square.py  odom_subscriber.py
src/part3_beyond_basics/: CMakeLists.txt  package.xml
src/part3_beyond_basics/launch/: pubsub.launch.py
src/part3_beyond_basics/maps/: map1.pgm  map1.yaml
src/part3_beyond_basics/scripts/: lidar_subscriber.py  param_circle.py
src/part4_services/: CMakeLists.txt  package.xml
src/part4_services/scripts/: map_saver_client.py  my_number_game.py  number_game_client.py
src/part4_services/srv/: MyNumberGame.srv
src/part5_actions/: CMakeLists.txt  package.xml
src/part5_actions/scripts/: camera_sweep_action_client.py
